feat: add code to reproduce bug